fixed more styling issues

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <center><h1 class="letter"> {{gameCtrl.primary.sign }} is for ... </h1></center>
       </div> 
       <div class="col-sm-2">
-        <h5 class="alphabet">Animal Alphabet</h5>
+        <div class="alphabet">Animal Alphabet</div>
         <div ng-click="gameCtrl.showStats()" >
           <img src="./img/stats_icon.png" class="stats-icon">
         </div>
